...
                    Text(
                      _formType == FormType.login
                          ? 'Уже есть аккаунт?'
                          : 'Еще нет аккаунта? ',
                    ),
                    FlatButton(
                      key: Key('login_view_button'),
                      child: RichText(
                        text: TextSpan(children: [
                          TextSpan(
                            text: _formType == FormType.login
                                ? 'Войти'
                                : 'Регистрация',
...
